# sample01

./: .gitignore  LICENSE  LICENSE-APACHE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
src/: layout.tsx  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: dataset.rs  mod.rs  model.rs
src-tauri/src/config/: mod.rs  window_config.rs
src-tauri/src/models/: mod.rs  response.rs
src-tauri/src/services/: database.rs  dataset.rs  export.rs  generation.rs  mod.rs  model.rs
src-tauri/src/utils/: cell_prompt_template.rs  hardware.rs  mod.rs
src/assets/models/: gemma-3-1b-it.md  index.ts  llama-3.2-3B-Instruct.md  mistral-7b-instruct-v0.3.md  phi-3-mini-4k-instruct.md  qwen3-1.7B.md
src/components/features/: MainSidebar.tsx
src/components/layouts/: main.layout.tsx  settings.layout.tsx
src/components/ui/button/: Button.tsx  (+2 more)
src/hooks/: useCurrentDataset.ts  useModelState.ts
src/interfaces/: dataset.interface.ts  download.interface.ts  invoke.interface.ts  model.interface.ts
src/lib/: i18n.ts  toast.tsx  utils.ts
src/locales/: en.json
src/providers/: index.tsx  theme.provider.tsx
src/routes/: __root.tsx  index.tsx
src/routes/datasets/: index.tsx  new.tsx
src/routes/models/: index.tsx
src/routes/settings/: general.tsx
src/stores/: dataset.store.ts  download.store.ts  model.store.ts
src/styles/: globals.scss  toast.scss
(+46 files in other folders)
