[package]
name = "sample01"
version = "0.1.0"
description = "Create or enrich your datasets locally"
authors = ["Mohamed DIALLO"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "sample01_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12.23", features = ["stream"] }
futures-util = "0.3"
csv = "1.3.1"
regex = "1.0"
llama-cpp-2 = "0.1.122"
json5 = "0.4.1"
tauri-plugin-os = "2"
tauri-plugin-store = "2.0.0"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
stop-words = "0.9.0"
rand = "0.8"



[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
rustfmt = "0.10.0"
tempfile = "3.8"
mockito = "1.3"
wiremock = "0.5"

